--- a/style.css
+++ b/style.css
@@ -10,27 +10,24 @@
 }
 
 body {
-    display: flex;
-    justify-content: center;
     align-items: center;
     background-color: rgb(240, 235, 243);
-    min-height: 100vh;
     padding: 20px;
     text-align: center;
 }
 
 header {
-    font-size: 20px;
+    font-size: 16px;
     background-color: #311354;
     color: rgb(255, 255, 255);
     display: flex;
     align-items: center;
-    padding: 20px;
     border-radius: 10px;
     width: 100%;
-    max-width: 800px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
+
+
 
 header img {
     margin-right: 20px;
@@ -56,8 +53,8 @@ input {
     padding: 15px;
     margin-top: 10px;
     transition: border-color 0.3s;
-    width: 80%;
-    max-width: 400px;
+    align-items: center;
+    
 }
 
 input:focus {
@@ -72,7 +69,7 @@ button {
     color: rgb(248, 248, 248);
     font-size: 14px;
     padding: 15px;
-    margin-top: 10px;
+    margin-top: 5px;
     cursor: pointer;
     transition: background-color 0.3s;
 }
@@ -125,10 +122,10 @@ a:hover {
     }
 
     input {
-        width: 100%;
+        width: auto;
     }
 
     button {
-        width: 100%;
+        width: auto;
     }
 }
